build: Inject stylus files into 'app.styl'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -7,3 +7,7 @@
  *                          (http://spdx.org/licenses/BSD-3-Clause.html)
  *
  */
+
+
+// injector:stylus:begin
+// injector:stylus:end
